// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders as expected when passing a different className 1`] = `
<body>
  <div>
    <input
      class="lab-radio dummy-class"
      id="test"
      name="test"
      type="radio"
      value="undefined"
    />
     
    <label
      class="lab-radio__label"
      for="test"
    >
      <span
        class="lab-radio__container"
      />
       
      Test
    </label>
  </div>
</body>
`;

exports[`Radio renders as expected when passing disabled as true 1`] = `
<body>
  <div>
    <input
      class="lab-radio "
      disabled=""
      id="test-input"
      name="test-input"
      type="radio"
      value="undefined"
    />
     
    <label
      class="lab-radio__label"
      for="test-input"
    >
      <span
        class="lab-radio__container"
      />
       
      Test
    </label>
  </div>
</body>
`;

exports[`Radio renders with base props 1`] = `
<body>
  <div>
    <input
      class="lab-radio "
      id="test"
      name="test"
      type="radio"
      value="undefined"
    />
     
    <label
      class="lab-radio__label"
      for="test"
    >
      <span
        class="lab-radio__container"
      />
       
      Test
    </label>
  </div>
</body>
`;
